feat(resolves #1): Initial implementation.

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "terraform-aws-flagscript-[descriptive]]",
-  "description": "[AWS Service] modules for flagscript setups adhering to reasonable aws standards.",
-  "main": "index.js",
+  "name": "terraform-aws-flagscript-headless-distribution",
+  "description": "Headless distribution module for flagscript setups adhering to reasonable aws standards.",
   "scripts": {
     "prepare": "husky"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/flagscript/terraform-aws-flagscript-kms.git"
+    "url": "git+https://github.com/flagscript/terraform-aws-flagscript-headless-distribution.git"
   },
   "keywords": [
     "flagscript",
     "aws",
-    "terraform",
-    "kms"
+    "cloudfront",
+    "headless",
+    "website"
   ],
   "author": {
     "name": "Greg Kaestle",
@@ -21,9 +21,9 @@
   },
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/flagscript/terraform-aws-flagscript-kms/issues"
+    "url": "https://github.com/flagscript/terraform-aws-flagscript-headless-distribution/issues"
   },
-  "homepage": "https://github.com/flagscript/terraform-aws-flagscript-kms#readme",
+  "homepage": "https://github.com/flagscript/terraform-aws-flagscript-headless-distribution#readme",
   "dependencies": {
     "husky": "^9.1.5"
   }
